# qt-level-editor-lite

./: .gitignore  CMakeLists.txt  Canvas.cpp  Canvas.h  Entity.cpp  Entity.h  MainWindow.cpp  MainWindow.h  README.md
include/: AddEntityCommand.h  Canvas.h  DeleteEntityCommand.h  Entity.h  InspectorPanel.h  MainWindow.h  MoveEntityCommand.h
resources/: test2.json
src/: AddEntityCommand.cpp  Canvas.cpp  DeleteEntityCommand.cpp  Entity.cpp  InspectorPanel.cpp  MainWindow.cpp  MoveEntityCommand.cpp  README.md
